[tool.poetry]
name = "eva-3d"
version = "0.1.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]

[tool.poetry.scripts]
eva-3d = 'eva_3d.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
