[tool.poetry]
name = "eva-3d"
version = "0.1.3"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]

[tool.poetry.scripts]
eva-3d = 'eva_3d.__main__:main'

[tool.poetry.plugins."mkdocs.plugins"]
eva-3d-plugin = 'eva_3d.plugin:EVAPlugin'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pydantic = "^1.8.2"
python-slugify = "^5.0.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
