[tool.poetry]
name = "eva-3d"
version = "2.0.0"
description = ""
authors = ["Paweł Kucmus <pkucmus@gmail.com>"]

[tool.poetry.scripts]
eva-3d = 'eva_3d.__main__:main'

[tool.poetry.plugins."mkdocs.plugins"]
eva-3d-plugin = 'eva_3d.plugin:EVAPlugin'

[tool.poetry.dependencies]
python = "^3.10"
click = "^7"
pydantic = "^1"
python-slugify = "^5"
Jinja2 = "^2"
python-onshape-exporter = {path = "python-onshape-exporter", develop = true}
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
